--- a/src/index.css
+++ b/src/index.css
@@ -215,6 +215,23 @@ button:active {
   color: white;
 }
 
+.userCircle {
+  display: flex;
+  margin: 0rem 0.5rem;
+  align-items: center;
+  justify-content: center;
+  background-color: #7342d6;
+  color: white;
+  border-radius: 999px;
+  padding: 0.5rem;
+  aspect-ratio: 1 / 1;
+  width: 32px;
+  height: 32px;
+  font-size: 0.95rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
 /* 
 
 LANDING
@@ -771,6 +788,157 @@ select {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+}
+
+/*  REGISTRATION FORM */
+
+.registerMain {
+  height: 100%;
+  margin: 3rem auto;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+}
+
+.registerFormContainer,
+.loginFormContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.formContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formList {
+  width: 100%;
+  max-width: 900px;
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: column;
+  padding: 0rem 2rem;
+  row-gap: 1.25rem;
+}
+
+.formLi {
+  width: 100%;
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 0.5rem;
+}
+
+.formLi label {
+  font-weight: 500;
+  font-family: inherit;
+  font-size: 1.25rem;
+}
+
+.formLi input {
+  width: 100%;
+  padding: 1rem 1rem;
+  border-radius: 0.5rem;
+  box-shadow: none;
+  border: 1px solid black;
+}
+
+.formBtnContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 0.5rem;
+  padding: 1rem 3rem;
+  max-width: 900px;
+}
+
+.formBtn {
+  padding: 1.5rem 1.5rem;
+  box-shadow: none;
+  border: none;
+  border-radius: 0.5rem;
+  font-weight: 700;
+  background-color: transparent;
+}
+
+.formBtnPrimary {
+  background-color: #7342d6;
+  color: white;
+}
+
+.formBtnSecondary {
+  color: #7342d6;
+}
+
+/* user profile */
+
+.userProfileMain {
+  position: relative;
+  margin: 2rem auto;
+  width: 100%;
+  max-width: 1200px;
+  padding: 2rem;
+  height: 100%;
+  min-height: 600px;
+}
+
+.userProfileHeader {
+  width: 100%;
+  margin-bottom: 1rem;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.userProfileOptions {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+.modal {
+  position: absolute;
+  padding: 2rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 1.5rem;
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.logoutModal {
+  row-gap: 1rem;
+}
+
+.modalBtnContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.modalBtnContainer .confirmBtn {
+  background-color: rgb(176, 70, 70);
+}
+
+.logoutModal .cancelBtn {
+  margin: 1rem 0rem;
+  cursor: pointer;
 }
 
 /* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
